# emokit

c/: CMakeLists.txt  Findliblo.cmake
c/examples/emokit_osc/: CMakeLists.txt  emokit_osc.cpp
c/examples/emokit_osc/pd/: emokit-osc.pd
c/examples/epocd/: CMakeLists.txt  epocd.c
c/include/: libepoc.h
c/src/: CMakeLists.txt  epoc.c  epoc_libusb.c  epoc_win32.c
